--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-<script src="../aframe-ar.js"> </script>
+<!-- <script src="../aframe-ar.js"> </script> -->
 <style>
 html{
   font-family: 'Poppins', sans-serif;
@@ -73,22 +73,22 @@ a.button, button{
   <body style='margin : 0px; overflow: hidden;'>
    
 
-    <a-scene embedded arjs='debugUIEnabled: false;'>
+    <a-scene>
       <a-assets>
-            <video id="marti" webkit-playsinline loop src="personaje-marti.mp4">
+            <video id="marti" webkit-playsinline autoplay="true" loop src="personaje-marti.mp4">
             <video id="rami"  webkit-playsinline  loop src="personaje-ramiro.mp4">
     </a-assets>  	
 	
-    
+
     
     <a-marker id="marti-marker" preset='custom' type='pattern' url='marti.patt'>
-             <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="-90 180 -90" >
+             <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="0 90 -90" >
              </a-video>
     </a-marker>
 
 
     <a-marker id="rami-marker" preset='custom' type='pattern' url='rami.patt'>
-             <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="-90 180 -90" >
+             <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="0 90 -90" >
              </a-video>
     </a-marker>
   	<a-entity camera></a-entity>
