--- a/example/index.html
+++ b/example/index.html
@@ -75,19 +75,19 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline loop src="personaje-marti.mp4">
+            <video id="marti" autoplay webkit-playsinline loop src="personaje-marti.mp4">
             <video id="rami"  webkit-playsinline  loop src="personaje-ramiro.mp4">
     </a-assets>  	
-	
+
     
     <a-marker id="marti-marker" preset='custom' type='pattern' url='marti.patt'>
-             <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="90 0 90>
+             <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="0 0 -90">
              </a-video>
     </a-marker>
 
 
     <a-marker id="rami-marker" preset='custom' type='pattern' url='rami.patt'>
-             <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="90 0 90 >
+             <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="0 0 -90">
              </a-video>
     </a-marker>
   	<a-entity camera></a-entity>
