--- a/example/index.html
+++ b/example/index.html
@@ -80,13 +80,13 @@ a.button, button{
     </a-assets>  	
 
     
-    <a-marker id="marti-marker" preset='custom' type='pattern' url='marti.patt'>
+    <a-marker id="marti-marker" preset='custom' type='pattern' url='martistencil.patt'>
              <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
 
 
-    <a-marker id="rami-marker" preset='custom' type='pattern' url='rami.patt'>
+    <a-marker id="rami-marker" preset='custom' type='pattern' url='ramistencil.patt'>
              <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
