--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="../aframe-ar.js"> </script>
+<link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <style>
 html{
   font-family: 'Poppins', sans-serif;
@@ -144,14 +145,17 @@ a.button, button{
         v.pause();
           (function(vid,id,i){
             document.getElementById(id+ '-marker').addEventListener('marker-found', function(e){ 
-               vid.play();
-               vid.onended = function(e) {
-                 checkOpenYoutube()
-              };
+                
+                  for (var z = 0; z < videos.length; z++) {
+                    var id2 = videos[i];
+                      var v2 = document.getElementById(id2);
+                      v2.play();
+                    }
+               
                played[i] = true;
             });
             document.getElementById(id+'-marker').addEventListener('marker-lost', function(e){ 
-              vid.pause();
+              // vid.pause();
 
             });
           })(v,id,i);
