--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="aframe-gif-shader.js"></script>
 <script src="../aframe-ar.js"> </script>
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <style>
