--- a/example/index.html
+++ b/example/index.html
@@ -98,7 +98,7 @@ a.button, button{
     </a-marker>
 
     
-    <a-marker  preset='custom' type='pattern' url='metropolis.patt'>
+    <a-marker  preset='custom'  width="2" height="4" type='pattern' url='metropolis.patt'>
      <a-entity position="0 0 0" rotation="-90 180 -180"
            geometry="primitive:plane;" material="side: double;shader:gif;src:url(instrucciones.gif);opacity:1">
             </a-entity>
