--- a/ni-se-te-ocurra/index.html
+++ b/ni-se-te-ocurra/index.html
@@ -82,13 +82,13 @@ a.button, button{
     </a-assets>  	
 
     
-    <a-marker id="marti-marker" preset='custom' type='pattern' url='martistencil.patt'>
+    <a-marker id="marti-marker" preset='custom' type='pattern' url='ojo.patt'>
              <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
 
 
-    <a-marker id="rami-marker" preset='custom' type='pattern' url='ramistencil.patt'>
+    <a-marker id="rami-marker" preset='custom' type='pattern' url='flechas.patt'>
              <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
