--- a/asesinos/index.html
+++ b/asesinos/index.html
@@ -77,8 +77,8 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline loop src="personaje-marti.mp4">
-            <video id="rami"  webkit-playsinline  loop src="personaje-ramiro.mp4">
+            <video id="marti" webkit-playsinline loop src="../example/personaje-marti.mp4">
+            <video id="rami"  webkit-playsinline  loop src="../example/personaje-ramiro.mp4">
     </a-assets>  	
 
     
