--- a/ni-se-te-ocurra/index.html
+++ b/ni-se-te-ocurra/index.html
@@ -77,7 +77,7 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline loop src="../example/personaje-marti.mp4">
+            <video id="marti" webkit-playsinline loop src="ojo.mp4">
             <video id="rami"  webkit-playsinline  loop src="../example/personaje-ramiro.mp4">
     </a-assets>  	
 
