--- a/ni-se-te-ocurra/index.html
+++ b/ni-se-te-ocurra/index.html
@@ -78,7 +78,7 @@ a.button, button{
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
             <video id="marti" webkit-playsinline loop src="ojo.mp4">
-            <video id="rami"  webkit-playsinline  loop src="../example/personaje-ramiro.mp4">
+            <video id="rami"  webkit-playsinline  loop src="flechas.mp4">
     </a-assets>  	
 
     
