--- a/seniuelos/index.html
+++ b/seniuelos/index.html
@@ -77,18 +77,18 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline loop src="../example/personaje-marti.mp4">
-            <video id="rami"  webkit-playsinline  loop src="../example/personaje-ramiro.mp4">
+            <video id="marti" webkit-playsinline loop src="piedra.mp4">
+            <video id="rami"  webkit-playsinline  loop src="lagarto.mp4">
     </a-assets>  	
 
     
-    <a-marker id="marti-marker" preset='custom' type='pattern' url='martistencil.patt'>
+    <a-marker id="marti-marker" preset='custom' type='pattern' url='luna.patt'>
              <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
 
 
-    <a-marker id="rami-marker" preset='custom' type='pattern' url='ramistencil.patt'>
+    <a-marker id="rami-marker" preset='custom' type='pattern' url='horse.patt'>
              <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
