--- a/asesinos/index.html
+++ b/asesinos/index.html
@@ -77,12 +77,12 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline loop src="../example/personaje-marti.mp4">
-            <video id="rami"  webkit-playsinline  loop src="../example/personaje-ramiro.mp4">
+            <video id="marti" webkit-playsinline loop src="asesinos-nico.mp4">
+            <video id="rami"  webkit-playsinline  loop src="asesinos-oleg.mp4">
     </a-assets>  	
 
     
-    <a-marker id="marti-marker" preset='custom' type='pattern' url='martistencil.patt'>
+    <a-marker id="marti-marker" preset='custom' type='pattern' url='luna.patt'>
              <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
@@ -105,7 +105,7 @@ a.button, button{
         <div class="logos">
          <img src="logo-cluster.png">
         </div>
-        
+
       </div>
     </div>
    
