--- a/asesinos/index.html
+++ b/asesinos/index.html
@@ -77,8 +77,8 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline loop src="asesinos-nico.mp4">
-            <video id="rami"  webkit-playsinline  loop src="asesinos-oleg.mp4">
+            <video id="marti" webkit-playsinline loop src="asesinos-nico.mp4"></video>
+            <video id="rami"  webkit-playsinline  loop src="asesinos-oleg.mp4"></video>
     </a-assets>  	
 
     
