--- a/asesinos/index.html
+++ b/asesinos/index.html
@@ -88,7 +88,7 @@ a.button, button{
     </a-marker>
 
 
-    <a-marker id="rami-marker" preset='custom' type='pattern'  url='horse.patt'>
+    <a-marker id="rami-marker" preset='custom' type='pattern' url='ramistencil.patt'>
              <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
