--- a/seniuelos/index.html
+++ b/seniuelos/index.html
@@ -111,7 +111,7 @@ a.button, button{
       <div class="inner">
         <h1>Señuelos </h1>
         <h5> Una historia de Señuelos. </h5>
-        <p> Aceptá permisos de camára, <a href="llaves.pdf" target="_blank">bajate los marcadores </a>, escanealos y descubrí la historia.x</p>
+        <p> Aceptá permisos de camára, <a href="llaves.pdf" target="_blank">bajate los marcadores </a>, escanealos y descubrí la historia.</p>
         <button type="button" onClick="start(this.parentNode.parentNode)">Empezar</button>
         <h6> <small> Con el apoyo de </small> </h6>
         <div class="logos">
