--- a/seniuelos/index.html
+++ b/seniuelos/index.html
@@ -1,8 +1,8 @@
 <!doctype HTML>
 <html>
 <head>
-<title>Taller Historias Inmersivas:  </title>
-<meta name="description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Ejemplo' desde tu teléfono.">
+<title>Taller Historias Inmersivas: Señuelos </title>
+<meta name="description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Señuelos' desde tu teléfono.">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
