--- a/asesinos/index.html
+++ b/asesinos/index.html
@@ -3,6 +3,11 @@
 <head>
 <title>Taller Historias Inmersivas: Asesinos  </title>
 <meta name="description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Asesinos' desde tu teléfono.">
+<meta property="og:url" content="http://tinchoforever.github.io/bafici-2018/asesinos/" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Taller Historias Inmersivas: Asesinos " />
+<meta property="og:description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Asesinos' desde tu teléfono." />
+<meta property="og:image" content="https://img.youtube.com/vi/Z0AAzlCIIU8/hqdefault.jpg" />
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
