--- a/ni-se-te-ocurra/index.html
+++ b/ni-se-te-ocurra/index.html
@@ -4,6 +4,11 @@
 <title>Taller Historias Inmersivas: Ni Se Te Ocurra </title>
 <meta name="description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Ni Se Te Ocurra' desde tu teléfono.">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta property="og:url" content="http://tinchoforever.github.io/bafici-2018/ni-se-te-ocurra" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Taller Historias Inmersivas: Ni Se Te Ocurra " />
+<meta property="og:description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Ni Se Te Ocurra' desde tu teléfono." />
+<meta property="og:image" content="https://img.youtube.com/vi/GUhahx2CgLg/hqdefault.jpg" />
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="aframe-gif-shader.js"></script>
