--- a/seniuelos/index.html
+++ b/seniuelos/index.html
@@ -3,11 +3,19 @@
 <head>
 <title>Taller Historias Inmersivas: Señuelos </title>
 <meta name="description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Señuelos' desde tu teléfono.">
+<meta property="og:url" content="http://tinchoforever.github.io/bafici-2018/seniuelos/" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Taller Historias Inmersivas: Señuelos" />
+<meta property="og:description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Señuelos' desde tu teléfono." />
+<meta property="og:image" content="https://img.youtube.com/vi/FAjDqZ2CH7I/hqdefault.jpg" />
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="aframe-gif-shader.js"></script>
 <script src="../aframe-ar.js"> </script>
+
+
+
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <style>
 html{
