--- a/asesinos/index.html
+++ b/asesinos/index.html
@@ -8,6 +8,8 @@
 <meta property="og:title" content="Taller Historias Inmersivas: Asesinos " />
 <meta property="og:description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Asesinos' desde tu teléfono." />
 <meta property="og:image" content="https://img.youtube.com/vi/Z0AAzlCIIU8/hqdefault.jpg" />
+<meta property="og:image:width" content="480">
+<meta property="og:image:height" content="360">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
