--- a/ni-se-te-ocurra/index.html
+++ b/ni-se-te-ocurra/index.html
@@ -9,6 +9,9 @@
 <meta property="og:title" content="Taller Historias Inmersivas: Ni Se Te Ocurra " />
 <meta property="og:description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Ni Se Te Ocurra' desde tu teléfono." />
 <meta property="og:image" content="https://img.youtube.com/vi/GUhahx2CgLg/hqdefault.jpg" />
+<meta property="og:image:width" content="480">
+<meta property="og:image:height" content="360">
+
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="aframe-gif-shader.js"></script>
