--- a/seniuelos/index.html
+++ b/seniuelos/index.html
@@ -8,6 +8,9 @@
 <meta property="og:title" content="Taller Historias Inmersivas: Señuelos" />
 <meta property="og:description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Señuelos' desde tu teléfono." />
 <meta property="og:image" content="https://img.youtube.com/vi/FAjDqZ2CH7I/hqdefault.jpg" />
+<meta property="og:image:width" content="480">
+<meta property="og:image:height" content="360">
+
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
