--- a/borges/index.html
+++ b/borges/index.html
@@ -97,7 +97,6 @@ a.button, button{
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
             <video id="marti" webkit-playsinline  src="borges-1.mp4"></video>
-            <video id="rami"  webkit-playsinline   src="asesinos-oleg.mp4"></video>
     </a-assets>  	
 
     
@@ -107,10 +106,7 @@ a.button, button{
     </a-marker>
 
 
-    <a-marker id="rami-marker" preset='custom' type='pattern'  url='horse.patt'>
-             <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="90 -90 0">
-             </a-video>
-    </a-marker>
+   
     
   	<a-entity camera></a-entity>
     </a-scene>
@@ -135,7 +131,7 @@ a.button, button{
     </div>
   </body>
   <script>
-    var videos = ["marti","rami"];
+    var videos = ["marti"];
     var played = [false,false];
     var youtubeLaps = 0;
     var lapCount = 0 ;
