--- a/borges/index.html
+++ b/borges/index.html
@@ -96,7 +96,7 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline  src="borges-1.mp4"></video>
+            <video id="marti" webkit-playsinline  src="https://tinchoforever.github.io/bafici-2018/borges/borges-1.mp4?a=a"></video>
              <video id="rami" webkit-playsinline  src="asesinos-oleg.mp4"></video>
     </a-assets>  	
 
