--- a/borges/index.html
+++ b/borges/index.html
@@ -97,7 +97,7 @@ a.button, button{
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
             <video id="marti" webkit-playsinline  src="https://tinchoforever.github.io/bafici-2018/borges/borges-1.mp4?a=a"></video>
-             <video id="rami" webkit-playsinline  src="asesinos-oleg.mp4"></video>
+             <video id="rami" webkit-playsinline  src="https://tinchoforever.github.io/bafici-2018/borges/borges-1.mp4?a=a"></video>
     </a-assets>  	
 
     
