--- a/borges/index.html
+++ b/borges/index.html
@@ -107,8 +107,8 @@ a.button, button{
 
     </a-marker>
 
-<a-marker id="rami-marker" preset='custom' type='pattern' url='borges.patt'>
-             <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="90 -90 0">
+<a-marker id="rami-marker" preset='custom' type='pattern' url='s.patt'>
+             <a-video src="#rami" width="4" height="2" position="0 0 0" rotation="90 0 0">
              </a-video>
              
     </a-marker>
