--- a/la-salida/index.html
+++ b/la-salida/index.html
@@ -96,8 +96,8 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline  src="la-salida-old.mp4"></video>
-             <video id="rami" webkit-playsinline  src="la-salida-old.mp4"></video>
+            <video id="marti" webkit-playsinline  src="la-salida.mp4"></video>
+             <video id="rami" webkit-playsinline  src="la-salida.mp4"></video>
     </a-assets>  	
  
     
