--- a/borges/index.html
+++ b/borges/index.html
@@ -12,9 +12,9 @@
 <meta property="og:image:height" content="360">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
-<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="aframe.min.js"></script>
 <script src="aframe-gif-shader.js"></script>
-<script src="../aframe-ar.js"> </script>
+<script src="aframe-ar.js"> </script>
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <style>
 html{
@@ -96,8 +96,8 @@ a.button, button{
 
     <a-scene embedded arjs='debugUIEnabled: false;'>
       <a-assets>
-            <video id="marti" webkit-playsinline  src="https://tinchoforever.github.io/bafici-2018/borges/borges-1.mp4?a=a"></video>
-             <video id="rami" webkit-playsinline  src="https://tinchoforever.github.io/bafici-2018/borges/borges-1.mp4?a=a"></video>
+            <video id="marti" webkit-playsinline  src="borges-1.mp4"></video>
+             <video id="rami" webkit-playsinline  src="borges-1.mp4?a=a"></video>
     </a-assets>  	
  
     
@@ -133,7 +133,7 @@ a.button, button{
       <div class="inner">
         <h1> El Aleph Invertido</h1>
         <p> Continua la historia en 360</p>
-        <a class="button" href="https://www.youtube.com/watch?v=Z0AAzlCIIU8">Abrir YouTube!</a>
+        <a class="button" href="https://www.youtube.com/watch?v=9hpRFnvSK88">Abrir YouTube!</a>
       </div>
     </div>
   </body>
