--- a/la-salida/index.html
+++ b/la-salida/index.html
@@ -133,7 +133,7 @@ a.button, button{
       <div class="inner">
         <h1> La Salida</h1>
         <p> Continua la historia en 360</p>
-        <a class="button" href="https://www.youtube.com/watch?v=Z0AAzlCIIU8">Abrir YouTube!</a>
+        <a class="button" href="https://www.youtube.com/watch?v=hJ_b0XY61Oc">Abrir YouTube!</a>
       </div>
     </div>
   </body>
