--- a/borges/index.html
+++ b/borges/index.html
@@ -5,9 +5,9 @@
 <meta name="description" content="En el UNQ 2018 construimos historias inmersivas. Disfrutá de 'Asesinos' desde tu teléfono.">
 <meta property="og:url" content="http://tinchoforever.github.io/bafici-2018/asesinos/" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Taller Historias Inmersivas: Asesinos " />
-<meta property="og:description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Asesinos' desde tu teléfono." />
-<meta property="og:image" content="https://img.youtube.com/vi/Z0AAzlCIIU8/hqdefault.jpg" />
+<meta property="og:title" content="Taller Historias Inmersivas: El Aleph Invertido  " />
+<meta property="og:description" content="En el UNQ construimos historias inmersivas. Disfrutá de ' El Aleph Invertido ' desde tu teléfono." />
+<meta property="og:image" content="https://img.youtube.com/vi/9hpRFnvSK88/hqdefault.jpg" />
 <meta property="og:image:width" content="480">
 <meta property="og:image:height" content="360">
 <meta name="apple-mobile-web-app-capable" content="yes">
