--- a/borges/index.html
+++ b/borges/index.html
@@ -12,9 +12,9 @@
 <meta property="og:image:height" content="360">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
-<script src="aframe.min.js"></script>
+<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="aframe-gif-shader.js"></script>
-<script src="aframe-ar.js"> </script>
+<script src="../aframe-ar.js"> </script>
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
 <style>
 html{
