--- a/te-puede-pasar-a-vos/index.html
+++ b/te-puede-pasar-a-vos/index.html
@@ -145,8 +145,8 @@ a.button, button{
     </div>
   </body>
   <script>
-    var videos = ["golpes"];  
-    var played = [false];
+    var videos = ["golpes", "foto", "mancha", "pareja"];  
+    var played = [false, false, false, false];
     var youtubeLaps = 0;
     var lapCount = 0 ;
     function checkOpenYoutube(){
