--- a/te-puede-pasar-a-vos/index.html
+++ b/te-puede-pasar-a-vos/index.html
@@ -98,7 +98,7 @@ a.button, button{
         <video id="golpes"  webkit-playsinline  src="violencia-remedios.mp4">
         <video id="foto"  webkit-playsinline  src="violencia-pareja.mp3">
         <video id="mancha"  webkit-playsinline  src="mujer_maquillada.mp4">
-        <video id="pareja"  webkit-playsinline  src="rotura_foto_pareja.mp4" loop>
+        <video id="pareja"  webkit-playsinline  src="rotura_foto_pareja.mp4" >
     </a-assets>   
 
 
