--- a/te-puede-pasar-a-vos/index.html
+++ b/te-puede-pasar-a-vos/index.html
@@ -94,11 +94,13 @@ a.button, button{
   <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='patternRatio: 0.5; debugUIEnabled: false;'>
 
+
+
     <a-assets>
         <video id="golpes"  webkit-playsinline  src="violencia-remedios.mp4">
         <video id="foto"  webkit-playsinline  src="violencia-pareja.mp4">
-        <video id="mancha"  webkit-playsinline  src="mujer_maquillada.mp4" loop>
-        <video id="pareja"  webkit-playsinline  src="rotura_foto_pareja.mp4" loop autoplay >
+        <video id="mancha"  webkit-playsinline  src="mujer-maquillada.mp4" loop>
+        <video id="pareja"  webkit-playsinline  src="rotura-foto.mp4" loop autoplay >
     </a-assets>   
 
 
