--- a/te-puede-pasar-a-vos/index.html
+++ b/te-puede-pasar-a-vos/index.html
@@ -98,7 +98,7 @@ a.button, button{
 
     <a-assets>
         <video id="golpes"  webkit-playsinline  src="violencia-remedios.mp4">
-        <video id="foto"  webkit-playsinline  src="violencia-pareja.mp4">
+        <video id="fotos"  webkit-playsinline  src="violencia-pareja.mp4">
         <video id="mancha"  webkit-playsinline  src="mujer-maquillada.mp4" loop>
         <video id="pareja"  webkit-playsinline  src="rotura-foto.mp4" loop autoplay >
     </a-assets>   
@@ -112,12 +112,12 @@ a.button, button{
              
     </a-marker>
      <a-marker id="fotos-marker" preset='custom' type='pattern' url='foto_perfil_audio_pattern-marker.patt'>
-           <a-video src="#fotos" width="1" height="2" position="0 0 0" rotation="90 180 0">
+           <a-video src="#fotos" width="2" height="1" position="0 0 0" rotation="90 180 0">
              </a-video>
     </a-marker>
 
    <a-marker id="pareja-marker" preset='custom' type='pattern' url='foto_pareja_pattern-marker-.patt'>
-           <a-video src="#pareja" width="1" height="2" position="0 0 0" rotation="90 180 0">
+           <a-video src="#pareja" width="2" height="1" position="0 0 0" rotation="90 180 0">
              </a-video>
     </a-marker>
 
