--- a/te-puede-pasar-a-vos/index.html
+++ b/te-puede-pasar-a-vos/index.html
@@ -152,7 +152,7 @@ a.button, button{
     </div>
   </body>
   <script>
-    var videos = ["golpes", "foto", "mancha", "pareja"];  
+    var videos = ["golpes", "fotos", "mancha", "pareja"];  
     var played = [false, false, false, false];
     var youtubeLaps = 0;
     var lapCount = 0 ;
