--- a/te-puede-pasar-a-vos/index.html
+++ b/te-puede-pasar-a-vos/index.html
@@ -184,7 +184,7 @@ a.button, button{
             document.getElementById(id+ '-marker').addEventListener('marker-found', function(e){ 
                 
                   for (var z = 0; z < videos.length; z++) {
-                    var id2 = videos[i];
+                    var id2 = videos[z];
                       var v2 = document.getElementById(id2);
                       v2.pause();
                     }
