--- a/histo-rita/index.html
+++ b/histo-rita/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
 <head>
-<title>Taller Historias Inmersivas:  </title>
+<title>HistoRita </title>
 <meta name="description" content="En el Bafici 2018 construimos historias inmersivas. Disfrutá de 'Ejemplo' desde tu teléfono.">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,900" rel="stylesheet">
@@ -82,7 +82,7 @@ a.button, button{
     </a-assets>  	
 
     
-    <a-marker id="marti-marker" preset='custom' type='pattern' url='martistencil.patt'>
+    <a-marker id="marti-marker" preset='custom' type='pattern' url='pattern-cleo.patt'>
              <a-video src="#marti" width="4" height="2" position="0 0 0" rotation="90 -90 0">
              </a-video>
     </a-marker>
@@ -121,7 +121,7 @@ a.button, button{
     </a-scene>
     <div id="wrapper" class="wrapper">
       <div class="inner">
-        <h1> Ejemplo </h1>
+        <h1> HistoRita </h1>
         <h5> Una historia de Ejemplo. </h5>
         <p> Aceptá permisos de camára, <a href="llaves.pdf" target="_blank">bajate los marcadores </a>, escanealos y descubrí la historia </p>
         <button type="button" onClick="start(this.parentNode.parentNode)">Empezar</button>
